// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectTable > with empty data > renders no element with null > dssd 1`] = `
<div>
  <!---->
  <!---->
   
  <!---->
   
  <!---->
  
</div>
`;

exports[`ObjectTable > with empty data > renders no element with undefined > dssd 1`] = `
<div>
  <!---->
  <span />
  <!---->
   
  <!---->
   
  <!---->
  
</div>
`;
